--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Tanmay]
-sfAccount = yi21809.central-india.azure
+sfAccount = cy28215.southeast-asia.azure
 sfUser = tanmaynemade
 sfPass = Tanmaynemade744!
 sfRole = accountadmin
